# docs/swagger.yaml
@@ -1,10 +1,12 @@
 basePath: /api/v1
 definitions:
-  internal_handlers.CreateStoryRequest:
+  handlers.CreateStoryRequest:
     properties:
       city:
         type: string
       country:
+        type: string
+      language:
         type: string
       preferences:
         items:
@@ -15,17 +17,17 @@ definitions:
           type: string
         type: array
     type: object
-  internal_handlers.GoogleLoginRequest:
+  handlers.GoogleLoginRequest:
     properties:
       access_token:
         type: string
     type: object
-  internal_handlers.LogoutRequest:
+  handlers.LogoutRequest:
     properties:
       refresh:
         type: string
     type: object
-  internal_handlers.PubSubMessage:
+  handlers.PubSubMessage:
     properties:
       attributes:
         additionalProperties:
@@ -40,19 +42,19 @@ definitions:
       publishTime:
         type: string
     type: object
-  internal_handlers.PubSubPushMessage:
+  handlers.PubSubPushMessage:
     properties:
       message:
-        $ref: '#/definitions/internal_handlers.PubSubMessage'
+        $ref: '#/definitions/handlers.PubSubMessage'
       subscription:
         type: string
     type: object
-  internal_handlers.RefreshTokenRequest:
+  handlers.RefreshTokenRequest:
     properties:
       refresh:
         type: string
     type: object
-  internal_handlers.StoryData:
+  handlers.StoryData:
     properties:
       audio:
         type: string
@@ -69,7 +71,7 @@ definitions:
       title:
         type: string
     type: object
-  internal_handlers.StoryResponse:
+  handlers.StoryResponse:
     properties:
       data: {}
       error:
@@ -77,7 +79,7 @@ definitions:
       message:
         type: string
     type: object
-  rio-go-model_internal_model.EmailRequest:
+  model.EmailRequest:
     properties:
       email:
         type: string
@@ -86,7 +88,7 @@ definitions:
       name:
         type: string
     type: object
-  rio-go-model_internal_model.StoryFeedback:
+  model.StoryFeedback:
     properties:
       email:
         type: string
@@ -95,14 +97,14 @@ definitions:
       storyId:
         type: string
     type: object
-  rio-go-model_internal_model.Tc:
+  model.Tc:
     properties:
       accepted:
         type: boolean
       email:
         type: string
     type: object
-  rio-go-model_internal_model.UserProfile:
+  model.UserProfile:
     properties:
       city:
         type: string
@@ -121,14 +123,14 @@ definitions:
       username:
         type: string
     type: object
-  rio-go-model_internal_util.HttpError:
+  util.HttpError:
     properties:
       message:
         type: string
       status:
         type: integer
     type: object
-  rio-go-model_internal_util.TokenPair:
+  util.TokenPair:
     properties:
       access:
         type: string
@@ -162,26 +164,26 @@ paths:
         name: google_login_request
         required: true
         schema:
-          $ref: '#/definitions/internal_handlers.GoogleLoginRequest'
+          $ref: '#/definitions/handlers.GoogleLoginRequest'
       produces:
       - application/json
       responses:
         "200":
           description: OK
           schema:
-            $ref: '#/definitions/rio-go-model_internal_util.TokenPair'
+            $ref: '#/definitions/util.TokenPair'
         "400":
           description: Invalid request body or missing access_token
           schema:
-            $ref: '#/definitions/rio-go-model_internal_util.HttpError'
+            $ref: '#/definitions/util.HttpError'
         "401":
           description: Invalid Google token
           schema:
-            $ref: '#/definitions/rio-go-model_internal_util.HttpError'
+            $ref: '#/definitions/util.HttpError'
         "500":
           description: Internal server error
           schema:
-            $ref: '#/definitions/rio-go-model_internal_util.HttpError'
+            $ref: '#/definitions/util.HttpError'
       summary: Google Login
       tags:
       - Authentication
@@ -197,7 +199,7 @@ paths:
         name: logout_request
         required: true
         schema:
-          $ref: '#/definitions/internal_handlers.LogoutRequest'
+          $ref: '#/definitions/handlers.LogoutRequest'
       produces:
       - application/json
       responses:
@@ -210,11 +212,11 @@ paths:
         "400":
           description: Invalid request body or missing refresh token
           schema:
-            $ref: '#/definitions/rio-go-model_internal_util.HttpError'
+            $ref: '#/definitions/util.HttpError'
         "500":
           description: Internal server error
           schema:
-            $ref: '#/definitions/rio-go-model_internal_util.HttpError'
+            $ref: '#/definitions/util.HttpError'
       summary: User Logout
       tags:
       - Authentication
@@ -229,26 +231,26 @@ paths:
         name: refresh_token_request
         required: true
         schema:
-          $ref: '#/definitions/internal_handlers.RefreshTokenRequest'
+          $ref: '#/definitions/handlers.RefreshTokenRequest'
       produces:
       - application/json
       responses:
         "200":
           description: '{\"access\":\"new_access_token\", \"refresh\":\"original_refresh_token\"}'
           schema:
-            $ref: '#/definitions/rio-go-model_internal_util.TokenPair'
+            $ref: '#/definitions/util.TokenPair'
         "400":
           description: Invalid request body or missing refresh token
           schema:
-            $ref: '#/definitions/rio-go-model_internal_util.HttpError'
+            $ref: '#/definitions/util.HttpError'
         "401":
           description: Invalid refresh token
           schema:
-            $ref: '#/definitions/rio-go-model_internal_util.HttpError'
+            $ref: '#/definitions/util.HttpError'
         "500":
           description: Failed to generate new access token
           schema:
-            $ref: '#/definitions/rio-go-model_internal_util.HttpError'
+            $ref: '#/definitions/util.HttpError'
       summary: Refresh Access Token
       tags:
       - Authentication
@@ -264,7 +266,7 @@ paths:
         name: logout_request
         required: true
         schema:
-          $ref: '#/definitions/internal_handlers.LogoutRequest'
+          $ref: '#/definitions/handlers.LogoutRequest'
       produces:
       - application/json
       responses:
@@ -277,11 +279,11 @@ paths:
         "400":
           description: Invalid request body or missing refresh token
           schema:
-            $ref: '#/definitions/rio-go-model_internal_util.HttpError'
+            $ref: '#/definitions/util.HttpError'
         "500":
           description: Internal server error
           schema:
-            $ref: '#/definitions/rio-go-model_internal_util.HttpError'
+            $ref: '#/definitions/util.HttpError'
       summary: User Logout
       tags:
       - Authentication
@@ -296,26 +298,26 @@ paths:
         name: refresh_token_request
         required: true
         schema:
-          $ref: '#/definitions/internal_handlers.RefreshTokenRequest'
+          $ref: '#/definitions/handlers.RefreshTokenRequest'
       produces:
       - application/json
       responses:
         "200":
           description: '{\"access\":\"new_access_token\", \"refresh\":\"original_refresh_token\"}'
           schema:
-            $ref: '#/definitions/rio-go-model_internal_util.TokenPair'
+            $ref: '#/definitions/util.TokenPair'
         "400":
           description: Invalid request body or missing refresh token
           schema:
-            $ref: '#/definitions/rio-go-model_internal_util.HttpError'
+            $ref: '#/definitions/util.HttpError'
         "401":
           description: Invalid refresh token
           schema:
-            $ref: '#/definitions/rio-go-model_internal_util.HttpError'
+            $ref: '#/definitions/util.HttpError'
         "500":
           description: Failed to generate new access token
           schema:
-            $ref: '#/definitions/rio-go-model_internal_util.HttpError'
+            $ref: '#/definitions/util.HttpError'
       summary: Refresh Access Token
       tags:
       - Authentication
@@ -330,7 +332,7 @@ paths:
         name: emailRequest
         required: true
         schema:
-          $ref: '#/definitions/rio-go-model_internal_model.EmailRequest'
+          $ref: '#/definitions/model.EmailRequest'
       responses:
         "200":
           description: Email sent successfully
@@ -347,6 +349,39 @@ paths:
       summary: Sends an email to the user
       tags:
       - Email
+  /reset-audio-by-theme-id:
+    get:
+      consumes:
+      - application/json
+      description: Resets the audio by theme id
+      parameters:
+      - description: Theme ID
+        in: query
+        name: theme_id
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: Audio reset successfully
+          schema:
+            additionalProperties:
+              type: boolean
+            type: object
+        "401":
+          description: Invalid or missing authorization token
+          schema:
+            $ref: '#/definitions/util.HttpError'
+        "500":
+          description: Internal server error
+          schema:
+            $ref: '#/definitions/util.HttpError'
+      security:
+      - BearerAuth: []
+      summary: Reset Audio By Theme ID
+      tags:
+      - Audio
   /stories:
     get:
       consumes:
@@ -374,16 +409,16 @@ paths:
           description: OK
           schema:
             items:
-              $ref: '#/definitions/internal_handlers.StoryData'
+              $ref: '#/definitions/handlers.StoryData'
             type: array
         "401":
           description: Invalid or missing authorization token
           schema:
-            $ref: '#/definitions/rio-go-model_internal_util.HttpError'
+            $ref: '#/definitions/util.HttpError'
         "500":
           description: Internal server error
           schema:
-            $ref: '#/definitions/rio-go-model_internal_util.HttpError'
+            $ref: '#/definitions/util.HttpError'
       summary: List Generated Stories
       tags:
       - Stories
@@ -398,26 +433,26 @@ paths:
         name: story
         required: true
         schema:
-          $ref: '#/definitions/internal_handlers.CreateStoryRequest'
+          $ref: '#/definitions/handlers.CreateStoryRequest'
       produces:
       - application/json
       responses:
         "201":
           description: Story created successfully
           schema:
-            $ref: '#/definitions/internal_handlers.StoryResponse'
+            $ref: '#/definitions/handlers.StoryResponse'
         "400":
           description: Invalid request body
           schema:
-            $ref: '#/definitions/rio-go-model_internal_util.HttpError'
+            $ref: '#/definitions/util.HttpError'
         "401":
           description: Invalid or missing authorization token
           schema:
-            $ref: '#/definitions/rio-go-model_internal_util.HttpError'
+            $ref: '#/definitions/util.HttpError'
         "500":
           description: Internal server error
           schema:
-            $ref: '#/definitions/rio-go-model_internal_util.HttpError'
+            $ref: '#/definitions/util.HttpError'
       security:
       - BearerAuth: []
       summary: Create a new story
@@ -434,7 +469,7 @@ paths:
         name: storyFeedback
         required: true
         schema:
-          $ref: '#/definitions/rio-go-model_internal_model.StoryFeedback'
+          $ref: '#/definitions/model.StoryFeedback'
       produces:
       - application/json
       responses:
@@ -447,11 +482,11 @@ paths:
         "401":
           description: Unauthorized
           schema:
-            $ref: '#/definitions/rio-go-model_internal_util.HttpError'
+            $ref: '#/definitions/util.HttpError'
         "500":
           description: Internal Server Error
           schema:
-            $ref: '#/definitions/rio-go-model_internal_util.HttpError'
+            $ref: '#/definitions/util.HttpError'
       security:
       - BearerAuth: []
       summary: Create story feedback
@@ -468,7 +503,7 @@ paths:
         name: tc
         required: true
         schema:
-          $ref: '#/definitions/rio-go-model_internal_model.Tc'
+          $ref: '#/definitions/model.Tc'
       produces:
       - application/json
       responses:
@@ -481,11 +516,11 @@ paths:
         "401":
           description: Unauthorized
           schema:
-            $ref: '#/definitions/rio-go-model_internal_util.HttpError'
+            $ref: '#/definitions/util.HttpError'
         "500":
           description: Internal Server Error
           schema:
-            $ref: '#/definitions/rio-go-model_internal_util.HttpError'
+            $ref: '#/definitions/util.HttpError'
       security:
       - BearerAuth: []
       summary: Create TC
@@ -502,7 +537,7 @@ paths:
         name: request
         required: true
         schema:
-          $ref: '#/definitions/internal_handlers.PubSubPushMessage'
+          $ref: '#/definitions/handlers.PubSubPushMessage'
       produces:
       - application/json
       responses:
@@ -532,7 +567,7 @@ paths:
         name: request
         required: true
         schema:
-          $ref: '#/definitions/internal_handlers.PubSubPushMessage'
+          $ref: '#/definitions/handlers.PubSubPushMessage'
       produces:
       - application/json
       responses:
@@ -568,11 +603,11 @@ paths:
         "401":
           description: Invalid or missing authorization token
           schema:
-            $ref: '#/definitions/rio-go-model_internal_util.HttpError'
+            $ref: '#/definitions/util.HttpError'
         "500":
           description: Internal server error
           schema:
-            $ref: '#/definitions/rio-go-model_internal_util.HttpError'
+            $ref: '#/definitions/util.HttpError'
       security:
       - BearerAuth: []
       summary: Delete User Profile
@@ -594,11 +629,11 @@ paths:
         "401":
           description: Invalid or missing authorization token
           schema:
-            $ref: '#/definitions/rio-go-model_internal_util.HttpError'
+            $ref: '#/definitions/util.HttpError'
         "500":
           description: Internal server error
           schema:
-            $ref: '#/definitions/rio-go-model_internal_util.HttpError'
+            $ref: '#/definitions/util.HttpError'
       security:
       - BearerAuth: []
       summary: Get User Profile
@@ -614,7 +649,7 @@ paths:
         name: userProfile
         required: true
         schema:
-          $ref: '#/definitions/rio-go-model_internal_model.UserProfile'
+          $ref: '#/definitions/model.UserProfile'
       produces:
       - application/json
       responses:
@@ -627,11 +662,11 @@ paths:
         "401":
           description: Invalid or missing authorization token
           schema:
-            $ref: '#/definitions/rio-go-model_internal_util.HttpError'
+            $ref: '#/definitions/util.HttpError'
         "500":
           description: Internal server error
           schema:
-            $ref: '#/definitions/rio-go-model_internal_util.HttpError'
+            $ref: '#/definitions/util.HttpError'
       security:
       - BearerAuth: []
       summary: Update User Profile
